COMMIT-productService
Cập nhật product service